# kza

./: DESCRIPTION  MD5  NAMESPACE  README  TODO  aclocal.m4  cleanup  configure  configure.ac
R/: decompose.R  kza.R  kzft.R  kzft.R.in  kzfta.R  rlv.R  zzz.R
data/: fars.rda
man/: Rkzft.Rd  Rkzp.Rd  fars.Rd  kz.Rd  kz_decompose.Rd  kza.Rd  kzf.Rd  kzft.Rd  kzp.Rd  kzs.Rd  kzsv.Rd  kztp.Rd  periodogram.Rd  plot.kzp.Rd  rlv.Rd  smooth.Rd
src/: Makevars  Makevars.in  Makevars.win  Rkza.c  ckzft.c  config.h  config.h.in  date.h  date_int.c  init.c  kz.c  kz.h  kz_ma.c  kza.c  kza_res.rc  kzf.c  kzft.c  kzft.h  kzp.c  kzsv.c  kztp.c
test/: ckzft.R  decompose.R  decompose_kza.R  kz.R  kzft.R  kzft_sin.R  kzm.R  kzp.R  kzs.R  spectrum.R  test_decompose.R  test_decompose2.R  test_eg.R  test_kzdecomp.R  test_kzp.R  testing.R  time.R
